--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "octokit": "^3.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
