--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.3",
+    "framer-motion": "^11.0.5",
     "install": "^0.13.0",
     "next": "13.5.6",
     "octokit": "^3.1.2",
